--- a/1_vue_basics.html
+++ b/1_vue_basics.html
@@ -11,8 +11,9 @@
     <p> <a target="_blank" v-bind:href="link">Link</a> </p>
     <p v-html="htmlCode"></p>
     <hr>
+    
     <h2>v-once Kullanımı!</h2>
-    <h3>v-once ile sayhello3'deki vonceMessage parametresinin değişikliği ilgili alana yansımıyor</h3>
+    <p>v-once ile sayhello3'deki vonceMessage parametresinin değişikliği ilgili alana yansımıyor</p>
     <p v-once>{{vonceMessage}}</p>
     <p>{{ vonceMessage }}</p>
     <p>{{ sayHello3() }}</p>
