--- a/4_vue_reactivity_computedproperties.html
+++ b/4_vue_reactivity_computedproperties.html
@@ -1,13 +1,21 @@
 <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 
 <h2>Reactivity - Computed Properties</h2>
-<p>Bir butona basılıp bir değer değiştiğinde ona bağla başka bir değerin etkilenmesi ve değişmesi</p>
-<p>Aşağıdaki örnekte arttırılıp azaltılan artından da ekrana bastırılan her bir işlem aslında tüm 
+<p>
+    Bir butona basılıp bir değer değiştiğinde ona bağla başka bir değerin etkilenmesi ve değişmesi.
+    Computed property'leri bir mantık / logic karşılığında başka bir sonucu etkilemek istiyorsak kullanırız
+    ve Computed senkron çalışır. Sonuç anında oluşur.
+</p>
+
+<p>
+    Aşağıdaki örnekte arttırılıp azaltılan artından da ekrana bastırılan her bir işlem aslında tüm
     ekranı yenilediğinden bir maliyet sayılmakta. Burada Eğer ki ekrana bastırma yapmasydık ilgili değer
-yine artacaktı ancak ekrana bastırmadığımız için hem tüm ekran balışmayacaktı hem de ekrandaki diğer 
-elemanlar yeniden derlenerek maliyet oluşturmayacaktı. Buradaki en mantıklı çözüm "Computed Properites"
-adı verilen yöntemdir. Bir değişken gibi davransa da bir metod gibi çalışmaktadır. Computed başlığı altında
-tanımlanır ve metod gibi değil değişken gibi çağırılır. </p>
+    yine artacaktı ancak ekrana bastırmadığımız için hem tüm ekran balışmayacaktı hem de ekrandaki diğer
+    elemanlar yeniden derlenerek maliyet oluşturmayacaktı. Buradaki en mantıklı çözüm "Computed Properites"
+    adı verilen yöntemdir. Bir değişken gibi davransa da bir metod gibi çalışmaktadır. Computed başlığı altında
+    tanımlanır ve metod gibi değil değişken gibi çağırılır.
+</p>
+
 <div id="divContainer">
     <h4>Bad Way</h4>
     <button v-on:click="increase()">Arttır</button>
@@ -53,8 +61,8 @@ tanımlanır ve metod gibi değil değişken gibi çağırılır. </p>
                 return (this.counter2 > 10 ? "10'dan büyüktür" : "10'dan küçüktür");
             }
         },
-        computed:{
-            output: function(){
+        computed: {
+            output: function () {
                 console.log("Computed metod çalıştı");
                 return (this.counter2 > 10 ? "10'dan büyüktür" : "10'dan küçüktür");
             }
