--- a/4.Bölüm - Canavar Avı Oyunu/1_vue_canavar_1.html
+++ b/4.Bölüm - Canavar Avı Oyunu/1_vue_canavar_1.html
@@ -6,10 +6,86 @@
 </p>
 
 <div id="dvContainer">
+    <table>
+        <tr>
+            <td>
+                Hero
+            </td>
+            <td>
+                Monster
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <span v-text="'Hero HP: ' + heroHP"></span>
+            </td>
+            <td>
+                <span v-text="'Monster HP: ' + monsterHP"></span>
+            </td>
+        </tr>
+    </table>
+    <br>
+    <div>
+        <button @click="attackToMonster(false)">Attack</button>
+        <button @click="attackToMonster(true)">Special Attack</button>
+        <button @click="healToHero()">Heal</button>
+        <button @click="goBack()">Cancel</button>
+    </div>
+    <br>
+    <div>
+        <ul v-for="log in logs">
+            <li v-text="log"></li>
+        </ul>
+    </div>
 </div>
 
 <script>
     new Vue({
-        el: "#dvContainer"
+        el: "#dvContainer",
+        data: {
+            heroHP: 100,
+            monsterHP: 100,
+            heal: 0,
+            damage: 0,
+            logs: ['Start game!']
+        },
+        methods: {
+            attackToMonster: function (isSpecial) {
+                this.damage = Math.ceil(Math.random() * 10);
+                if (isSpecial)
+                    this.damage *= 2;
+
+                this.monsterHP = this.monsterHP - this.damage;
+                this.logs.push("Hero attacked to monster : " + this.damage);
+
+                this.attackToHero();
+            },
+            attackToHero: function () {
+                this.damage = Math.ceil(Math.random() * 10);
+
+                this.heroHP -= this.damage;
+                this.logs.push("Monster attacked to hero : " + this.damage);
+            },
+            healToHero: function () {
+                this.heal = Math.ceil(Math.random() * 10);
+                this.heroHP += this.heal;
+
+                this.logs.push("Healed to Hero : " + this.heal);
+            },
+            goBack: function () {
+                this.heroHP = 100;
+                this.monsterHP = 100;
+
+                this.logs.clear;
+            }
+        },
+        computed: {
+            generateDamage: function () {
+                return Math.ceil(Math.random() * 10);
+            },
+            generateHeal:function(){
+                return Math.ceil(Math.random() * 10);
+            }
+        }
     });
 </script>
